@@ -1,5 +1,7 @@
 2006-05-19  Titus Brown  <t@issola.caltech.edu>
 
+	* Added 'formfill' extension module, tests, & docs.
+
 	* 'debug' now takes boolean (+/-) arguments, too.
 
 2006-05-17  Titus Brown  <t@issola.caltech.edu>
